#76 - Remove the sql ant tasks